{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 89,
  "lineage": "40f88b3b-6cbe-ffe2-b5a2-dc8f5ef1f1ba",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:security-group/sg-0523c0d0bb61c6653",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0523c0d0bb61c6653",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0046f7da8bdf3e5ab"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-eks-cluster-cluster-f9b93cdf1aef557cfbf0e189a9",
            "name_prefix": "dev-eks-cluster-cluster-",
            "owner_id": "084766854861",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-eks-cluster-cluster",
              "cluster": "dev-eks-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-eks-cluster-cluster",
              "cluster": "dev-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "sg-0523c0d0bb61c6653",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:security-group/sg-0046f7da8bdf3e5ab",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0046f7da8bdf3e5ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070630f52f96e6fc1",
                  "sg-0897411f7d6368f20"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 10251/tcp webhook",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0523c0d0bb61c6653"
                ],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0523c0d0bb61c6653"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0523c0d0bb61c6653"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0523c0d0bb61c6653"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0523c0d0bb61c6653"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0523c0d0bb61c6653"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0523c0d0bb61c6653"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "dev-eks-cluster-node-ea7aafaf4e63d43a2f9a403b9e",
            "name_prefix": "dev-eks-cluster-node-",
            "owner_id": "084766854861",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-eks-cluster-node",
              "cluster": "dev-eks-cluster",
              "kubernetes.io/cluster/dev-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-eks-cluster-node",
              "cluster": "dev-eks-cluster",
              "kubernetes.io/cluster/dev-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "sg-0046f7da8bdf3e5ab",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2175052016",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0523c0d0bb61c6653",
            "security_group_rule_id": "sgr-0c5c4d649a4f5e599",
            "self": false,
            "source_security_group_id": "sg-0046f7da8bdf3e5ab",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3449473648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-0c1de3f49e2b3cd1e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-2754643346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-00450c8b90d5d0c4b",
            "self": false,
            "source_security_group_id": "sg-0523c0d0bb61c6653",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2778419492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-08124f4fe5b07710b",
            "self": false,
            "source_security_group_id": "sg-0523c0d0bb61c6653",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1687941019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-094de64af6b538003",
            "self": false,
            "source_security_group_id": "sg-0523c0d0bb61c6653",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2916714509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-0d012fd24c1caca8d",
            "self": false,
            "source_security_group_id": "sg-0523c0d0bb61c6653",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3196433452",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-01c33abb17523c541",
            "self": false,
            "source_security_group_id": "sg-0523c0d0bb61c6653",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3659827175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-005530e41fbb85260",
            "self": false,
            "source_security_group_id": "sg-0523c0d0bb61c6653",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2423903721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-04b0a6c0d17a67ee9",
            "self": false,
            "source_security_group_id": "sg-0523c0d0bb61c6653",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2126307529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-0e9f3a2a2df692ab1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1644431395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-0f042acc3d48b8e5b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3327896524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-south-1",
            "security_group_id": "sg-0046f7da8bdf3e5ab",
            "security_group_rule_id": "sgr-079257e77b10e2fc0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc_dev.module.vpc.aws_customer_gateway.this",
            "module.vpc_dev.module.vpc.aws_db_subnet_group.database",
            "module.vpc_dev.module.vpc.aws_default_network_acl.this",
            "module.vpc_dev.module.vpc.aws_default_route_table.default",
            "module.vpc_dev.module.vpc.aws_default_security_group.this",
            "module.vpc_dev.module.vpc.aws_default_vpc.this",
            "module.vpc_dev.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc_dev.module.vpc.aws_flow_log.this",
            "module.vpc_dev.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_network_acl.database",
            "module.vpc_dev.module.vpc.aws_network_acl.elasticache",
            "module.vpc_dev.module.vpc.aws_network_acl.intra",
            "module.vpc_dev.module.vpc.aws_network_acl.outpost",
            "module.vpc_dev.module.vpc.aws_network_acl.private",
            "module.vpc_dev.module.vpc.aws_network_acl.public",
            "module.vpc_dev.module.vpc.aws_network_acl.redshift",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc_dev.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc_dev.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc_dev.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.database_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc_dev.module.vpc.aws_route.private_nat_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway",
            "module.vpc_dev.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc_dev.module.vpc.aws_route_table.database",
            "module.vpc_dev.module.vpc.aws_route_table.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table.intra",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_route_table.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.database",
            "module.vpc_dev.module.vpc.aws_route_table_association.elasticache",
            "module.vpc_dev.module.vpc.aws_route_table_association.intra",
            "module.vpc_dev.module.vpc.aws_route_table_association.outpost",
            "module.vpc_dev.module.vpc.aws_route_table_association.private",
            "module.vpc_dev.module.vpc.aws_route_table_association.public",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift",
            "module.vpc_dev.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc_dev.module.vpc.aws_subnet.database",
            "module.vpc_dev.module.vpc.aws_subnet.elasticache",
            "module.vpc_dev.module.vpc.aws_subnet.intra",
            "module.vpc_dev.module.vpc.aws_subnet.outpost",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_subnet.redshift",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc_dev.module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc_dev.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc_dev.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc_dev.module.vpc.data.aws_caller_identity.current",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc_dev.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc_dev.module.vpc.data.aws_partition.current",
            "module.vpc_dev.module.vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:network-acl/acl-00463ccd6b8c8f996",
            "default_network_acl_id": "acl-00463ccd6b8c8f996",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00463ccd6b8c8f996",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "084766854861",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-00f34b103b715a658",
              "subnet-074cd36b080a9cce6",
              "subnet-0955293454112e048",
              "subnet-0a16c70ab4b5d19d8",
              "subnet-0a1b7aef290d813be",
              "subnet-0b624217e6e21fddc",
              "subnet-0c63ae4fc44bb0184",
              "subnet-0efe15d7f3646079c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-default"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:route-table/rtb-0fa649042fe970239",
            "default_route_table_id": "rtb-0fa649042fe970239",
            "id": "rtb-0fa649042fe970239",
            "owner_id": "084766854861",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:security-group/sg-0d0e34a1c6ae816d3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d0e34a1c6ae816d3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "084766854861",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-default"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dev.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e2de6a9741bb4b2",
            "arn": "arn:aws:ec2:ap-south-1:084766854861:elastic-ip/eipalloc-09e2de6a9741bb4b2",
            "association_id": "eipassoc-0e3f5a0a58bd412f9",
            "domain": "vpc",
            "id": "eipalloc-09e2de6a9741bb4b2",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-097b1405d7a4bcb53",
            "private_dns": "ip-10-0-1-47.ap-south-1.compute.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-13-207-71-253.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.71.253",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-ap-south-1a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "eipalloc-09e2de6a9741bb4b2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:internet-gateway/igw-07393ab5c7141c491",
            "id": "igw-07393ab5c7141c491",
            "owner_id": "084766854861",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "igw-07393ab5c7141c491",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e2de6a9741bb4b2",
            "association_id": "eipassoc-0e3f5a0a58bd412f9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-000671cda4f6e3a1d",
            "network_interface_id": "eni-097b1405d7a4bcb53",
            "private_ip": "10.0.1.47",
            "public_ip": "13.207.71.253",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a1b7aef290d813be",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-ap-south-1a"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "nat-000671cda4f6e3a1d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a673d1b16216a53b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000671cda4f6e3a1d",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a673d1b16216a53b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0a673d1b16216a53b"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_eip.nat",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_nat_gateway.this",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07393ab5c7141c491",
            "id": "r-rtb-05d99dc81f33c1b441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-05d99dc81f33c1b44",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-05d99dc81f33c1b44"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_internet_gateway.this",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:route-table/rtb-0a673d1b16216a53b",
            "id": "rtb-0a673d1b16216a53b",
            "owner_id": "084766854861",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000671cda4f6e3a1d",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtb-0a673d1b16216a53b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:route-table/rtb-05d99dc81f33c1b44",
            "id": "rtb-05d99dc81f33c1b44",
            "owner_id": "084766854861",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07393ab5c7141c491",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtb-05d99dc81f33c1b44",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd472b7252341571",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a673d1b16216a53b",
            "subnet_id": "subnet-0efe15d7f3646079c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-0bd472b7252341571",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bd578cbb9234826",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a673d1b16216a53b",
            "subnet_id": "subnet-0c63ae4fc44bb0184"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-02bd578cbb9234826",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d939e40ab2d197e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a673d1b16216a53b",
            "subnet_id": "subnet-00f34b103b715a658"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-05d939e40ab2d197e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc3a4bd3ca22581c",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a673d1b16216a53b",
            "subnet_id": "subnet-074cd36b080a9cce6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-0dc3a4bd3ca22581c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027ce4673a866221d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a673d1b16216a53b",
            "subnet_id": "subnet-0a16c70ab4b5d19d8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-027ce4673a866221d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.private",
            "module.vpc_dev.module.vpc.aws_subnet.private",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca8f74750102427",
            "region": "ap-south-1",
            "route_table_id": "rtb-05d99dc81f33c1b44",
            "subnet_id": "subnet-0a1b7aef290d813be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-02ca8f74750102427",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ee5dbf8859dc3ac",
            "region": "ap-south-1",
            "route_table_id": "rtb-05d99dc81f33c1b44",
            "subnet_id": "subnet-0955293454112e048"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-01ee5dbf8859dc3ac",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002d8c47446e91aca",
            "region": "ap-south-1",
            "route_table_id": "rtb-05d99dc81f33c1b44",
            "subnet_id": "subnet-0b624217e6e21fddc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "rtbassoc-002d8c47446e91aca",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_route_table.public",
            "module.vpc_dev.module.vpc.aws_subnet.public",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-0efe15d7f3646079c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efe15d7f3646079c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-0efe15d7f3646079c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-0c63ae4fc44bb0184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c63ae4fc44bb0184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-0c63ae4fc44bb0184",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-00f34b103b715a658",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f34b103b715a658",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1c"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-00f34b103b715a658",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-074cd36b080a9cce6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074cd36b080a9cce6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-074cd36b080a9cce6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-0a16c70ab4b5d19d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.104.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a16c70ab4b5d19d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-0a16c70ab4b5d19d8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-0a1b7aef290d813be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1b7aef290d813be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-0a1b7aef290d813be",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-0955293454112e048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0955293454112e048",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-0955293454112e048",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:subnet/subnet-0b624217e6e21fddc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b624217e6e21fddc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084766854861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public-ap-south-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc-public-ap-south-1c"
            },
            "vpc_id": "vpc-0e731a88cae37963a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "subnet-0b624217e6e21fddc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc_dev.data.aws_availability_zones.available",
            "module.vpc_dev.module.vpc.aws_vpc.this",
            "module.vpc_dev.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_dev.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084766854861:vpc/vpc-0e731a88cae37963a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00463ccd6b8c8f996",
            "default_route_table_id": "rtb-0fa649042fe970239",
            "default_security_group_id": "sg-0d0e34a1c6ae816d3",
            "dhcp_options_id": "dopt-06daa4392706987b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e731a88cae37963a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa649042fe970239",
            "owner_id": "084766854861",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-env-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-env-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084766854861",
            "id": "vpc-0e731a88cae37963a",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}